--- a/DesignPatterns/abstractVSInstable/package.json
+++ b/DesignPatterns/abstractVSInstable/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "glob": "^8.0.3"
+    "bluebird": "^3.7.2",
+    "fast-xml-parser": "^4.0.9",
+    "glob": "^8.0.3",
+    "lodash": "^4.17.21"
   }
 }
