--- a/DesignPatterns/abstractVSInstable/package.json
+++ b/DesignPatterns/abstractVSInstable/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bluebird": "^3.7.2",
+    "csv": "^6.2.0",
     "fast-xml-parser": "^4.0.9",
     "glob": "^8.0.3",
     "lodash": "^4.17.21"
